# ChangeLog for Gentoo System Intialization ("rc") scripts
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPLv2

  06 Aug 2006; Mike Frysinger <vapier@gentoo.org>:

    Since the clock init.d script has been moved to critical services level,
    when it fails it causes booting to halt.  Since there isn't much the user
    can generally do about the problem until the system is finished booting,
    make the init.d script always return true as the error output should be
    enough to get people to fix the issue #139950.

  05 Aug 2006; Mike Frysinger <vapier@gentoo.org>:

    Don't use chown while booting in case user is using ldap auth so we
    dont inadvertently trigger a network lookup #139411.

  04 Aug 2006; Roy Marples <uberlord@gentoo.org>:

    Add bootchart suppport, #74425 and #141114. Thanks to Paul Pacheco.

* baselayout-1.12.4 (02 Aug 2006)

  02 Aug 2006; Roy Marples <uberlord@gentoo.org>:

    Updated tarball.sh to make clean before making the tarball, bug #142457

  30 Jul 2006; Mike Frysinger <vapier@gentoo.org>:

    If modprobing the rtc module in the clock init.d script failed, fall 
    back to the genrtc module #142140 by Robin Johnson.

* baselayout-1.12.2 (01 Aug 2006)

  26 Jul 2006; Roy Marples <uberlord@gentoo.org>:

    wpa_supplicant now launches even when wireless radio has been killed
    as if the user enables it then it will associate and work without the 
    user having to restart the interface.

  20 Jul 2006; Roy Marples <uberlord@gentoo.org>:

    Enable RC_NEED="foo" and RC_USE="bar" in /etc/conf.d/${SERVICE}
    so that users can overlay service dependencies with their own.
    Bug #140865

  19 Jul 2006; Roy Marples <uberlord@gentoo.org>:

    Rework dolisting and net.lo to use bash globbing instead of ls to save
    on un-needed forking.

  18 Jul 2006; Roy Marples <uberlord@gentoo.org>:

    Report services scheduled to be started by another service as
    started OK for splash.
