@@ -1,6 +1,14 @@
 # ChangeLog for Gentoo System Intialization ("rc") scripts
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPLv2
 
+  13 Aug 2006; Roy Marples <uberlord@gentoo.org>:
+
+    Drop -o from dhcpcd options as all dhcpcd versions in portage have been
+    patches to not bring the interface down and future versions may not
+    support that option as they won't bring the interface down at all.
+
+    Fix frequency parsing and add channel parsing to iwconfig, #143698
+
   06 Aug 2006; Mike Frysinger <vapier@gentoo.org>:
 
     Since the clock init.d script has been moved to critical services level,
